--- a/Orders.html
+++ b/Orders.html
@@ -6,15 +6,159 @@
     <link rel="shortcut icon" type="x-icon" href="images/New_Template-Photoroom__2_-removebg-preview.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Transactions</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="dashboard.css">
-    <link rel="stylesheet" href="account.css">
 </head>
 
 <body>
+    <style>
+        .bar {
+  align-items: center;
+  box-sizing: border-box;
+  display: flex;
+  height: 32px;
+  left: 0;
+  padding: 0 21px;
+  position: absolute;
+  width: 100%;
+}
+.bar-purple {
+  background:var(--900);
+  color: white;
+  clip-path: polygon(
+    360px 0,
+    360px 32px,
+    43px 32px,
+    39.775442px 31.67494px,
+    36.772078px 30.74264px,
+    34.054248px 29.26745px,
+    31.686292px 27.31371px,
+    29.732549px 24.94575px,
+    28.257359px 22.22792px,
+    27.325063px 19.22456px,
+    27px 16px,
+    27.325063px 12.77544px,
+    28.257359px 9.77208px,
+    29.732549px 7.05425px,
+    31.686292px 4.68629px,
+    34.054248px 2.73255px,
+    36.772078px 1.25736px,
+    39.775442px 0.32506px,
+    43px 0
+  );
+  transition: clip-path 200ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.option {
+  cursor: pointer;
+  line-height: 142px;
+  text-align: center;
+  width: 33.33%;
+}
+.bar-outer {
+  clip-path: polygon(0 0, 120px 0, 120px 32px, 0 32px);
+  clip-path: polygon(
+    0 0,
+    0 32px,
+    104px 32px,
+    107.22456px 31.67494px,
+    110.22792px 30.74264px,
+    112.94575px 29.26745px,
+    115.31371px 27.31371px,
+    117.26745px 24.94575px,
+    118.74264px 22.22792px,
+    119.67494px 19.22456px,
+    120px 16px,
+    119.67494px 12.77544px,
+    118.74264px 9.77208px,
+    117.26745px 7.05425px,
+    115.31371px 4.68629px,
+    112.94575px 2.73255px,
+    110.22792px 1.25736px,
+    107.22456px 0.32506px,
+    104px 0
+  );
+  height: 32px;
+  pointer-events: none;
+  transition: clip-path 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+}
+.bar-outer.pos2 .bar-purple {
+  clip-path: polygon(
+    360px 0,
+    360px 32px,
+    149px 32px,
+    145.775442px 31.67494px,
+    142.772078px 30.74264px,
+    140.054248px 29.26745px,
+    137.686292px 27.31371px,
+    135.732549px 24.94575px,
+    134.257359px 22.22792px,
+    133.325063px 19.22456px,
+    133px 16px,
+    133.325063px 12.77544px,
+    134.257359px 9.77208px,
+    135.732549px 7.05425px,
+    137.686292px 4.68629px,
+    140.054248px 2.73255px,
+    142.772078px 1.25736px,
+    145.775442px 0.32506px,
+    149px 0
+  );
+}
+.bar-outer.pos2 {
+  clip-path: polygon(
+    0 0,
+    0 32px,
+    210px 32px,
+    213.22456px 31.67494px,
+    216.22792px 30.74264px,
+    218.94575px 29.26745px,
+    221.31371px 27.31371px,
+    223.26745px 24.94575px,
+    224.74264px 22.22792px,
+    225.67494px 19.22456px,
+    226px 16px,
+    225.67494px 12.77544px,
+    224.74264px 9.77208px,
+    223.26745px 7.05425px,
+    221.31371px 4.68629px,
+    218.94575px 2.73255px,
+    216.22792px 1.25736px,
+    213.22456px 0.32506px,
+    210px 0
+  );
+}
+.bar-outer.left .bar-purple {
+  transition-delay: 0;
+}
+.bar-outer.left {
+  transition-delay: 80ms;
+}
+.bar-outer.right .bar-purple {
+  transition-delay: 80ms;
+}
+.bar-outer.right {
+  transition-delay: 0;
+}
+#selector{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 24vw;
+    margin: 20px;
+}
+#prnt-btn{
+    height: 100%;
+    /* width: 100%; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+    </style>
     <div class="wrapper">
         <aside id="sidebar">
             <div class="d-flex">
@@ -27,44 +171,44 @@
             </div>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="dashboard.html" class="sidebar-link">
+                    <a href="/dashboard" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-home (2).svg" alt=""></i>
                         <span style="margin-left: 20px;">Dashboard</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="inventory.html" class="sidebar-link">
+                    <a href="/inventory" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-inventory-50.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Inventory</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="reports.html" class="sidebar-link">
+                    <a href="#" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-graph-48.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Reports</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="Orders.html" class="sidebar-link">
+                    <a href="/transactions" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-order-50.png" alt="warehouse-1"/></i>
-                        <span style="margin-left: 20px;">Orders</span>
+                        <span style="margin-left: 20px;">Transactions</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="new_sale.html" class="sidebar-link">
+                    <a href="/new_sale" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-plus.svg" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">New Sale</span>
                     </a>
                 </li>
             </ul>
             <div class="sidebar-footer">
-                <a href="settings.html" class="sidebar-link">
+                <a href="#" class="sidebar-link">
                     <i><img height="25px" width="25px" src="images/icons8-settings.svg" alt="warehouse-1"/></i>
                     <span style="margin-left: 20px;">Settings</span>
                 </a>
             </div>
             <div class="sidebar-footer">
-                <a href="" class="sidebar-link">
+                <a href="{{ url_for('logout') }}" class="sidebar-link">
                     <i><img height="25px" width="25px" src="images/icons8-logout-50 (1).png" alt="warehouse-1"/></i>
                     <span style="margin-left: 20px;">Logout</span>
                 </a>
@@ -99,96 +243,85 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col"><a href="account_details.html"><img height="30px" width="28px" src="images/icons8-account-50.png" alt=""></a></div>
+                        <div class="col"><a href="/account"><img height="30px" width="28px" src="images/icons8-account-50.png" alt=""></a></div>
                     </div>
                 </div>
             </div>
             <div class="row" style="height: auto;">
-                <h5 class="text">My account</h5>
-            </div>
-            <div class="row" id="profileHeading">
-                <div class="text-center"><h2>Personal information</h2></div>
-            </div>
-            <div class="row" id="profileContainer">
-                <div class="col"></div>
-                <div class="col">
-                    <div class="profileCard">
-                        <div class="row" style="padding: 20px;">
-                            <div class="col" style="gap: 20px;">
-                                <label for="name">Name</label>
-                                <div class="name" id="data-field">Biswajit Chatterjee</div>
-                                <label for="name">Age</label>
-                                <div class="name" id="data-field">21</div>
-                                <label for="name">Gender</label>
-                                <div class="name" id="data-field">Male</div>
-                                <label for="name">Contact number</label>
-                                <div class="name" id="data-field">7001641316</div>
-                            </div>
-                            <div class="col">
-                                <label for="name">Email</label>
-                                <div class="name" id="data-field">biswajitchatterjee347@gmail.com</div>
-                            </div>
+                <div class="div" id="selector">
+                    <div class="bar bar-grey">
+                        <div class="option">Buy</div>
+                        <div class="option">Sell</div>
+                      </div>
+                      <div class="bar-outer">
+                        <div class="bar bar-purple">
+                          <div class="option" onclick="filterOrders('order')">Buy</div>
+                          <div class="option" onclick="filterOrders('sale')">Sell</div>
                         </div>
-                    </div>
+                      </div>
                 </div>
-                <div class="col"></div>
             </div>
-            <div class="row" id="profileHeading">
-                <div class="text-center"><h2>Business details</h2></div>
-            </div>
-            <div class="row" id="profileContainer">
-                <div class="col"></div>
+            <div class="row" style="height: 100%; width: 100%;">
                 <div class="col">
-                    <div class="profileCard">
-                        <div class="row" style="padding: 20px;">
-                            <div class="col" style="gap: 20px;">
-                                <label for="name">Store name</label>
-                                <div id="data-field">Bastralaya</div>
-                                <label for="name">Owner's name</label>
-                                <div id="data-field">Debjyoti Ghosh</div>
-                                <label for="name">Store address</label>
-                                <div id="data-field">I dont Know</div>
-                                <label for="name">GST number</label>
-                                <div id="data-field">7023740164121316</div>
-                            </div>
-                            <div class="col">
-                                <label for="name">Store type</label>
-                                <div id="data-field">Retail</div>
-                                <label for="name">Store ID</label>
-                                <button id="copy-btn" style="border-radius: 50px;width: auto;margin-left: 20px;background-color: var(--100); color: black;">Copy</button>
-                                <div class="storeId" id="data-field">85ce30ea-82b9-477f-bd06-6f95cd4c3f82</div>
-                            </div>
-                        </div>
-                    </div>
+                    <table class="table table-bordered border-dark m-3" style="height: auto;font-size: 12px;">
+                        <thead>
+                            <tr>
+                                <th>Bill Number</th>
+                                <th>Date</th>
+                                <th>customer name</th>
+                                <th>Price</th>
+                                <th>payment method</th>
+                                <th>Type</th>
+                                <th>Print Invoice</th>
+                            </tr>
+                        </thead>
+                        <tbody id="ordersTable">
+                            {% for transaction in transactions %}
+                            <tr>
+                                <td>{{ transaction.bill_number }}</td>
+                                <td>{{ transaction.last_updated.strftime('%Y-%m-%d %H:%M:%S') if transaction.last_updated else transaction.transaction_date }}</td>    
+                                <td>{{ transaction.customer_name }}</td>
+                                <td>{{ transaction.total_selling_price }}</td>
+                                <td>{{ transaction.payment_method }}</td>               
+                                <td>{{ transaction.type }}</td>
+                                <td><div class="div" id="prnt-btn">
+                                    <button>Print</button>
+                                </div></td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
-                <div class="col"></div>
             </div>
-        </div>
-    </div>
-    <script>
-       document.getElementById("copy-btn").addEventListener("click", function () {
-    const button = this; // Reference the button
-    const storeId = document.querySelector(".storeId").textContent;
-
-    navigator.clipboard.writeText(storeId)
-        .then(() => {
-            button.textContent = "Copied!"; // Change button text
-            button.style.backgroundColor = "var(--600)"; // Change background to green
-            button.style.color = "white"; // Ensure text remains visible
-
-            setTimeout(() => {
-                button.textContent = "Copy"; // Revert text
-                button.style.backgroundColor = "var(--100)"; // Revert background to blue
-                button.style.color = "black"; // Reset text color
-            }, 2000);
-        })
-        .catch(err => alert("Failed to copy: " + err));
-});
-
-    </script>
+        </div>           
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script src="dasboard.js"></script>
+    <script src="dashboard.js"></script>
+    <script>
+        const barOuter = document.querySelector(".bar-outer");
+const options = document.querySelectorAll(".bar-grey .option");
+let current = 1;
+options.forEach((option, i) => (option.index = i + 1));
+options.forEach(option =>
+                option.addEventListener("click", function() {
+  barOuter.className = "bar-outer";
+  barOuter.classList.add(`pos${option.index}`);
+  if (option.index > current) {
+    barOuter.classList.add("right");
+  } else if (option.index < current) {
+    barOuter.classList.add("left");
+  }
+  current = option.index;
+}));
+    function filterOrders(type) {
+        // Send the request to fetch the filtered data
+        window.location.href = `/transactions?type=${type}`;
+    }
+
+    function exportToExcel() {
+        // Implement your export functionality here
+    }
+    </script>
 </body>
 </html>
